# sample-pypi-project

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/sample_by_oriash/: __init__.py  example.py
