[tool.black]
  line-length = 120

[tool.pyright]
  pythonVersion = "3.11.10"

[tool.isort]
  profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_by_oriash"
version = "0.0.1"
authors = [
  { name="Ori A.", email="oriash.dev@gmail.com" },
]
description = "A small sample package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/oriash93/sample-pypi-project"